--- a/thor-main/paymentgateway-commons/build.gradle
+++ b/thor-main/paymentgateway-commons/build.gradle
@@ -42,13 +42,16 @@ dependencies {
     compile group: 'org.hibernate', name: 'hibernate-ehcache', version: '5.2.1.Final'
     compile group: 'org.apache.struts', name: 'struts2-core', version: '2.3.34'
     compile group: 'net.sf.uadetector', name: 'uadetector-resources', version: '2014.10'
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+    //compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     compile group: 'javax.servlet', name: 'jsp-api', version: '2.0'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.1'
     compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.1'
     compile group: 'org.apache.httpcomponents', name: 'fluent-hc', version: '4.5.1'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-    compile group: 'com.google.code.gson', name: 'gson', version: '1.7.2'
+    //compile group: 'com.google.code.gson', name: 'gson', version: '1.7.2'
+    //New Version Added
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
     compile group: 'commons-beanutils', name: 'commons-beanutils-core', version: '1.8.0'
     compile group: 'com.google.zxing', name: 'core', version: '2.2'
     compile group: 'com.google.zxing', name: 'javase', version: '2.2'
