--- a/thor-main/paymentgateway-pg-ws/build.gradle
+++ b/thor-main/paymentgateway-pg-ws/build.gradle
@@ -41,5 +41,8 @@ dependencies {
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.3'
     compile group: 'com.amazonaws', name: 'aws-java-sdk-cloudhsm', version: '1.11.147'
     testCompile('org.springframework.boot:spring-boot-starter-test')
-        
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation "mysql:mysql-connector-java:6.0.6"
+    implementation 'javax.xml.bind:jaxb-api:2.3.0'
+    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
 }
