--- a/thor-main/paymentgateway-pg-ws/build.gradle
+++ b/thor-main/paymentgateway-pg-ws/build.gradle
@@ -45,4 +45,7 @@ dependencies {
 	implementation "mysql:mysql-connector-java:6.0.6"
     implementation 'javax.xml.bind:jaxb-api:2.3.0'
     implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-}
+    implementation 'org.hibernate:hibernate-entitymanager:5.2.1.Final'
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+    
+} 
