--- a/thor-main/paymentgateway-pg-ws/src/main/resources/application.properties
+++ b/thor-main/paymentgateway-pg-ws/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8083
 server.servlet.context-path=/pgws
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/paytapp?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=admin
